plugins {
    id 'java'
    id 'io.qameta.allure' version '2.11.0'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    withJavadocJar()
    withSourcesJar()
}

repositories {
    mavenCentral()
}


def allureVersion = "2.29.1"

dependencies {
    implementation 'org.seleniumhq.selenium:selenium-java:4.34.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.19.0'
    implementation 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'

    implementation 'org.slf4j:slf4j-api:2.0.16'
    implementation 'io.cucumber:cucumber-java:7.23.0'
    implementation 'net.bytebuddy:byte-buddy:1.17.6'

    testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.23.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.13.3'
    testRuntimeOnly    'org.junit.jupiter:junit-jupiter-engine:5.13.3'
    testImplementation 'org.junit.platform:junit-platform-launcher:1.13.3'

    testImplementation 'org.assertj:assertj-core:3.27.3'

    testImplementation platform("io.qameta.allure:allure-bom:$allureVersion")

    testImplementation 'io.qameta.allure:allure-cucumber7-jvm'
    testImplementation "io.qameta.allure:allure-junit-platform"

    testImplementation 'io.rest-assured:rest-assured:5.5.5'

    testImplementation 'ch.qos.logback:logback-classic:1.5.16'
}

tasks.withType(Test).configureEach {
    systemProperty 'file.encoding', 'UTF-8'
    useJUnitPlatform()
    systemProperty "cucumber.filter.tags", System.getProperty("cucumber.filter.tags")
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
    options.annotationProcessorPath = configurations.compileClasspath
}


allure {
    useCucumberJVM {
        version = '7.23.0'
    }
}